# CollegeAI_DownloadedAPI

./: README.md  college_info.csv  college_list  college_list.txt  colleges.csv  config.yaml  database_retrieval.py  pyproject.toml  retrieve.py
